service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodeapp-service
spec:
  selector:
    app: nodeapp
  ports:
    - port: 80
      protocol: TCP
      name: http
      targetPort: 8080
